Added rest of functionality

--- a/Libro_Swap/Libro_Swap/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Libro_Swap/Libro_Swap/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using Libro_Swap.Areas.Identity
 @using Libro_Swap.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using Libro_Swap.Areas.Identity.Data
+@using DAL.Models
