--- a/Libro_Swap/Libro_Swap/Views/Shared/_LoginPartial.cshtml
+++ b/Libro_Swap/Libro_Swap/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using Libro_Swap.Areas.Identity.Data
+@using DAL.Models
 
 @inject SignInManager<Libro_SwapUser> SignInManager
 @inject UserManager<Libro_SwapUser> UserManager
