Fixed UserOwner bug Style Changes

--- a/Libro_Swap/Libro_Swap/Views/ListofBooks/Index.cshtml
+++ b/Libro_Swap/Libro_Swap/Views/ListofBooks/Index.cshtml
@@ -81,7 +81,7 @@
                          class="sherlock-holmes-1"
                          src="https://static.overlay-tech.com/assets/950eab8f-fe44-49a3-bfdf-26653b38da97.png" />
                     <div class="group-47"><p class="new">new</p></div>
-                    <p class="sherlok-golms">Шерлок Голмс</p>
+                    <li><a href="/book" class="active">Шерлок Голмс</a></li>
                 </div>
                 <div class="flex-wrapper-nine">
                     <img alt=""
