--- a/Libro_Swap/Libro_Swap/wwwroot/css/main.css
+++ b/Libro_Swap/Libro_Swap/wwwroot/css/main.css
@@ -370,25 +370,21 @@
     align-items: flex-start;
 }
 
-.group-48 {
+
+.button {
     background-color: rgba(255, 61, 0, 1);
-    margin-top: 39px;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
     border-radius: 20px;
-    padding: 0 109px 1px;
-    display: flex;
-    align-items: center;
 }
 
-.obminjati {
-    font-family: "Basis Grotesque Pro";
-    font-size: 30px;
-    font-weight: 900;
-    line-height: normal;
-    color: var(--white);
-    flex: 1;
-    align-self: stretch;
-    letter-spacing: 0.9px;
-}
 
 .flex-wrapper-three {
     background-color: var(--white);
